--- a/front/src/lol.html
+++ b/front/src/lol.html
@@ -31,7 +31,7 @@
             <div class="restor-open__rating-reviews">
               <img src="./imgs/restor/star.svg" alt="star">
               4.8
-              <img src="./imgs/restor/review.svg" alt="star">
+              <img src="./imgs/restor/review.svg" alt="review">
               Отзывы
             </div>
             <div class="restor-open__address-schedule">
@@ -44,8 +44,8 @@
               </div>
               <div class="restor-open__subtitle">
                 Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.
-                  Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.
-                  Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.
+                Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.
+                Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.
               </div>
             </div>
             <div class="restor-open__tags">
@@ -60,9 +60,16 @@
           <div class="restor-open__menu menu">
             <div class="menu__title">Меню</div>
             <div class="menu__dishes">
-              <div class="menu__dish dish"></div>
-              <div class="menu__dish dish"></div>
-              <div class="menu__dish dish"></div>
+              <div class="menu__dish dish">
+                <div class="dish__img-column">
+                  <img src="./imgs/restors/nagoya/set_curry_rise.svg" alt="set_curry_rise">
+                </div>
+                <div class="dish__info-column">
+                  <div class="dish__title">Сет Карри Райсу</div>
+                  <div class="dish__desc">Мисо-суп, рис, овощное Карри, капуста</div>
+                  <div class="dish__price">340 р.</div>
+                </div>
+              </div>
               <div class="menu__dish dish"></div>
               <div class="menu__dish dish"></div>
               <div class="menu__dish dish"></div>
