--- a/front/public/index.html
+++ b/front/public/index.html
@@ -14,6 +14,6 @@
     <title>React App</title>
   </head>
   <body>
-    <div class="app" id="root"></div>
+    <div id="root"></div>
   </body>
 </html>
